--- a/style.css
+++ b/style.css
@@ -389,7 +389,7 @@ canvas {
     margin-top: 25%;
     width: calc(100% + 2rem);
     margin-left: -1rem;
-    height: 200hv;
+    height: 225vh;
     padding: 0 1rem;
   }
 
